--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -17,7 +17,7 @@ style = { shape = "Block", blinking = "Off" }
 
 #[env]
 #TERM = "xterm-256color ssh"
-# On Fedora Server, adding "alacritty" to /etc/DIR_COLORS works.
+# set TERM variable in ".bash_profile", on servers to SSH into
 
 [font]
 size   = 13
